add hz, cents, more conversions

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <title>Xenharmonic Calculator</title>
         <link rel="stylesheet" href="style.css"/>
+        <link rel="shortcut icon" href="favicon.png" />
     </head>
     <body>
         <div id="flex-container">
@@ -42,11 +43,11 @@
                         <td class="output">13.69</td>
                     </tr>
                     <tr>
-                        <td class="inputExpression">&gt; cents(7$19 - 5:4)</td>
+                        <td class="inputExpression">&gt; cents(6$19 - 5:4)</td>
                         <td class="comment">5:4 "error" in 19ET</td>
                     </tr>
                     <tr>
-                        <td class="output">55.79</td>
+                        <td class="output">-7.37</td>
                     </tr>
                 </table>
             </footer>
