add list type, number()

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 </div>
             </div>
             <footer>
-                Here's my footer with all of my <code>examples</code>
+                Here are a few examples:
                 <table class="example">
                     <tr>
                         <td class="inputExpression">&gt; syntonicComma = (fifth * 4 - third) % octave</td>
@@ -29,7 +29,7 @@
                         <td class="output">81:80</td>
                     </tr>
                     <tr>
-                        <td class="inputExpression">&gt; $</td>
+                        <td class="inputExpression">&gt; #</td>
                         <td class="comment">get the 12ET value of the previous answer</td>
                     </tr>
                     <tr>
@@ -43,7 +43,7 @@
                         <td class="output">13.69</td>
                     </tr>
                     <tr>
-                        <td class="inputExpression">&gt; cents(6$19 - 5:4)</td>
+                        <td class="inputExpression">&gt; cents(6#19 - 5:4)</td>
                         <td class="comment">5:4 "error" in 19ET</td>
                     </tr>
                     <tr>
