add playback, fix list constructor

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <body>
         <div id="flex-container">
             <div id="code-container">
-                <header><strong>xen console</strong> - math with intervals</header>
+                <header><strong>xen console</strong> - interval playground</header>
                 <div id="codeArea">
                     <div id="result"></div>
                     <div>&gt; <input type="text" id="codeInput" size="20" spellcheck="false"/></div>
@@ -26,28 +26,28 @@
                         <td class="comment">get the value of the variable</td>
                     </tr>
                     <tr>
-                        <td class="output">81:80</td>
+                        <td class="output">81:80 (ratio)</td>
                     </tr>
                     <tr>
                         <td class="inputExpression">&gt; #</td>
                         <td class="comment">get the 12ET value of the previous answer</td>
                     </tr>
                     <tr>
-                        <td class="output">0.22 [12ET]</td>
+                        <td class="output">0.22#12 (et)</td>
                     </tr>
                     <tr>
                         <td class="inputExpression">&gt; cents(4 - 5:4)</td>
                         <td class="comment">5:4 "error" in 12ET</td>
                     </tr>
                     <tr>
-                        <td class="output">13.69</td>
+                        <td class="output">13.69c (cents)</td>
                     </tr>
                     <tr>
                         <td class="inputExpression">&gt; cents(6#19 - 5:4)</td>
                         <td class="comment">5:4 "error" in 19ET</td>
                     </tr>
                     <tr>
-                        <td class="output">-7.37</td>
+                        <td class="output">-7.37c (cents)</td>
                     </tr>
                 </table>
             </footer>
@@ -56,6 +56,7 @@
 
         <script src="tune.js"></script>
         <script src="xen.js" type="module"></script>
+        <script src="xen-webaudio-playback.js" type="module"></script>
         <script src="calc.js" type="module"></script>
     </body>
 </html>
