add tests mod, ratio, et hash & colon operators store tests as examples

--- a/index.html
+++ b/index.html
@@ -71,9 +71,23 @@
                             <td class="comment">play(5:4, sine)</td>
                         </tr>
                         <tr>
-                            <td class="inputExpression">adaptive tuning</td>
+                            <td class="inputExpression">adaptive</td>
                             <td class="comment">just(...)</td>
                             <td class="comment">just(#60, #64, #67)</td>
+                        </tr>
+                        <tr>
+                            <td>&nbsp;tuning</td>
+                            <td class="comment">simplify(...)</td>
+                            <td class="comment">simplify(#4)</td>
+                        </tr>
+                        <tr>
+                            <td></td>
+                            <td class="comment">closest(...)</td>
+                            <td class="comment">closest(#4)</td>
+                        </tr>
+                        <tr>
+                            <td></td>
+                            <td class="comment" colspan="2">approxpartials(...)</td>
                         </tr>
                     </table>
                 </div>
