update description and rename file

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
         <script src="tune.js"></script>
         <script src="xen.js" type="module"></script>
         <script src="xen-webaudio-playback.js" type="module"></script>
-        <script src="calc.js" type="module"></script>
+        <script src="xen-console.js" type="module"></script>
         <script src="xen.test.js" type="module"></script>
     </body>
 </html>
