change wording details

--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Xenharmonic Calculator</title>
+        <title>Xen Console</title>
         <link rel="stylesheet" href="style.css"/>
         <link rel="shortcut icon" href="favicon.png" />
     </head>
     <body class="primary">
         <div id="flex-container" class="main-text">
             <div id="code-container">
-                <header><div><strong>xen console</strong> - interval playground</div><button class="dark-switch">dark mode is off</button></header>
+                <header><div><strong>xen console</strong></div><button class="dark-switch">dark mode is off</button></header>
                 <div id="codeArea">
                     <div id="result"></div>
                     <div>&gt; <input type="text" id="codeInput" size="20" spellcheck="false" class="primary"/></div>
