add github links

--- a/index.html
+++ b/index.html
@@ -8,14 +8,27 @@
     <body class="primary">
         <div id="flex-container" class="main-text">
             <div id="code-container">
-                <header><div><strong>xen console</strong></div><button class="dark-switch">dark mode is off</button></header>
+                <header>
+                    <div>
+                        <strong>xen console</strong>
+                    </div>
+                    <div>
+                        <a href="https://github.com/skarukas/xen/wiki" target="_blank" class="link">[documentation]</a>
+                        |
+                        <a href="https://github.com/skarukas/xen" target="_blank" class="link">[code]</a>
+                    </div>
+                    <button class="dark-switch">dark mode is off</button>
+                </header>
                 <div id="codeArea">
                     <div id="result"></div>
                     <div>&gt; <input type="text" id="codeInput" size="20" spellcheck="false" class="primary"/></div>
                 </div>
             </div>
             <footer class="secondary">
-                <div style="text-align: center;"><strong>xen cheat sheet</strong> (... = any # of arguments)</div>
+                <div style="text-align: center;">
+                    <strong>xen cheat sheet</strong> 
+                    (... = any # of arguments) 
+                </div>
                 <div class="footer-container">
                     <table style="width: 55vw;" class="example">
                         <thead style="font-style:italic">
