--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <link rel="stylesheet" href="style.css"/>
         <link rel="shortcut icon" href="favicon.png" />
         <meta property="og:description" content="xen is a high-level, interpreted language for analyzing and operating upon musical pitch structures within the context of xenharmonic microtonal theory." />
-        <meta property="og:image"       content="./xen-story.png"/>
+        <meta property="og:image"       content="https://skarukas.github.io/xen/xen-story.png"/>
     </head>
     <body class="primary">
         <div id="flex-container" class="main-text">
