--- a/index.html
+++ b/index.html
@@ -114,6 +114,6 @@
         <script src="xen.js" type="module"></script>
         <script src="xen-webaudio-playback.js" type="module"></script>
         <script src="xen-console.js" type="module"></script>
-        <!--<script src="xen.test.js" type="module"></script>--> <!--only uncomment for testing-->
+        <!--<script src="xen.test.js" type="module"></script> <!--only uncomment for testing-->
     </body>
 </html>
