major refactor and add operators

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
         <title>Xen Console</title>
         <link rel="stylesheet" href="style.css"/>
         <link rel="shortcut icon" href="favicon.png" />
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta property="og:description" content="xen is a high-level, interpreted language for analyzing and operating upon musical pitch structures within the context of xenharmonic microtonal theory." />
         <meta property="og:image"       content="https://skarukas.github.io/xen/xen-story.png"/>
     </head>
@@ -131,9 +133,10 @@
         <script src="ace/ace.js"></script>
         <script src="https://code.jquery.com/jquery-3.5.1.min.js" type="module"></script>
         <script src="tune.js"></script>
-        <script src="xen.js" type="module"></script>
+        <!-- <script src="xen.js" type="module"></script> -->
+        <script src="xen-pkg.js"></script>
         <script src="xen-webaudio-playback.js" type="module"></script>
         <script src="xen-console.js" type="module"></script>
-        <!--<script src="xen.test.js" type="module"></script> <!--only uncomment for testing-->
+        <script src="xen.test.js" type="module"></script> <!--only uncomment for testing -->
     </body>
 </html>
