--- a/index.html
+++ b/index.html
@@ -137,6 +137,6 @@
         <script src="xen-pkg.js"></script>
         <script src="xen-webaudio-playback.js" type="module"></script>
         <script src="xen-console.js" type="module"></script>
-        <script src="xen.test.js" type="module"></script> <!--only uncomment for testing -->
+<!--         <script src="xen.test.js" type="module"></script> <!--only uncomment for testing -->
     </body>
 </html>
