spice up partial application

--- a/index.html
+++ b/index.html
@@ -225,6 +225,6 @@ finalResult = step3(13) // 0.5
         <script src="xen-pkg.js"></script>
         <script src="xen-webaudio-playback.js" type="module"></script>
         <script src="xen-console.js" type="module"></script>
-        <script src="xen.test.js" type="module"></script> <!--only uncomment for testing
+        <!-- <script src="xen.test.js" type="module"></script> <!--only uncomment for testing -->
     </body>
 </html>
